dev-header/add: added style to header and its content, changed header css class

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,21 @@ body {
     box-sizing: border-box;
 }
 
+header {
+    display: flex;
+    flex-direction: column;
+}
+
+header > img {
+    padding: 30px;
+    margin: auto;
+}
+
+.header-tabs-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
 a {
     color: inherit;
     text-decoration: none;
