--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body {
     display: flex;
     justify-content: center;
     margin: 0;
+    min-height: 100vh;
 }
 
 a {
@@ -56,6 +57,8 @@ header .tab-button {
 /***** Body *****/
 
 .main-container {
+    display: grid;
+    grid-template-rows: auto 1fr auto;
     width: 100%;
     max-width: 1440px;
     padding: 0 50px;
