--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,30 @@ a {
     text-decoration: none;
 }
 
+h1, h2 {
+    font-size: 22px;
+}
+
+button, input {
+    outline: none;
+    background: none;
+    border: none;
+}
+
+.height-100 {
+    height: 100%;
+}
+
+.flex-centered {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.fs18 {
+    font-size: 18px;
+}
+
 /***** Header *****/
 header {
     display: flex;
@@ -43,8 +67,6 @@ header > img {
 }
 
 header .tab-button {
-    background: none;
-    border: none;
     border-top: 2px solid var(--inactive-color);
     padding-bottom: 40px;
 }
