--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,44 @@ header .tab-button {
     box-sizing: border-box;
 }
 
+/***** Search Form *****/
+
+.search-lodge-container {
+    padding: 20px;
+    gap: 35px;
+    display: flex;
+    flex-direction: column;
+}
+
+#search-lodge-form {
+    display: grid;
+    grid: 50px / 50px 1fr;
+}
+
+#search-lodge-form button {
+    background: var(--main-color);
+    border-radius: 15px;
+    box-shadow: 0px 4px 4px 0px #00000040;
+}
+
+.lodge-search-bar {
+    display: grid;
+    grid-template-columns: 1fr 50px;
+    border-top: 1px solid var(--main-bg-color);
+    border-bottom: 1px solid var(--main-bg-color);
+    border-radius: 0 15px 15px 0;
+}
+
+.icon-place-pin {
+    background-color: var(--main-bg-color);
+    border-radius: 15px 0px 0px 15px;
+}
+
+#lodge-form-input {
+    padding: 0 28px;
+    font-weight: 700;
+}
+
 .section-title {
     margin: 0;
     font-size: 22px;
