--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
     --main-color: #0065FC;
     --main-bg-color: #F2F2F2;
     --filter-bg-color: #DEEBFF;
+    --button-main-border-color: #D9D9D9;
     --inactive-color: #00000000;
 }
 
@@ -123,6 +124,21 @@ header .tab-button {
 #lodge-form-input {
     padding: 0 28px;
     font-weight: 700;
+}
+
+/***** Filters *****/
+.filters-container {
+    display: grid;
+    grid: 50px 50px / 1fr 1fr;
+    gap: 20px;
+}
+
+.filters-container button {
+    border: 2px solid var(--button-main-border-color);
+    border-radius: 25px;
+    font-size: 14px;
+    font-weight: 700;
+    gap: 10px;
 }
 
 .section-title {
