dev-search-sct/update: changed style for responsive

--- a/css/style.css
+++ b/css/style.css
@@ -378,6 +378,9 @@ footer {
     }
 
     /***** Filters *****/
+    .filters-container {
+        align-items: unset;
+    }
     .filter-buttons-container {
         display: grid;
         grid: 50px 50px / 1fr 1fr;
