--- a/css/style.css
+++ b/css/style.css
@@ -214,12 +214,13 @@ header .tab-button {
     justify-content: space-between;
     row-gap: 50px;
 }
-
-.hebergements-and-populaires section {
-    background-color: var(--main-bg-color);
+.hebergements-and-populaires section, .activites {
     border-radius: 20px;
     padding: 30px;
     box-sizing: border-box;
+}
+.hebergements-and-populaires section {
+    background-color: var(--main-bg-color);
 }
 
 /****** Hebergements ***********/
@@ -229,7 +230,6 @@ header .tab-button {
 .hebergements-cards {
     display: grid;
     grid: auto / 1fr 1fr 1fr;
-    gap: 30px;
     margin: 30px 0;
 }
 .hebergements-cards .card {
@@ -281,9 +281,14 @@ header .tab-button {
     align-items: center;
 }
 
+.populaires-cards {
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+}
+
 .populaires-cards .card {
     display: flex;
-    margin-top: 33px;
 }
 
 .populaires-cards img {
@@ -314,6 +319,36 @@ header .tab-button {
 .populaires-cards .card-rating {
     margin-bottom: 5px;
 }
+
+/***** Activities *****/
+.activites {
+    margin-top: 35px;
+}
+.activites-cards {
+    display: grid;
+    grid: auto / 1fr 1fr 1fr 1fr;
+    margin: 30px 0;
+}
+.activites-cards .card {
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.activites-cards img {
+    width: 100%;
+    height: 380px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+.activites-cards .card-txt {
+    padding: 20px;
+}
+
+.hebergements-cards, .populaires-cards, .activites-cards {
+    gap: 30px;
+} 
 
 /***** Footer *****/
 
@@ -353,12 +388,6 @@ footer {
         width: 100%;
     }
 
-    .populaires-cards {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-    }
-
     .populaires-cards a {
         width: 30%;
     }
@@ -369,6 +398,11 @@ footer {
 
     .populaires-cards .card-subtitle {
         font-size: 13px;
+    }
+
+    /***** Activites *****/
+    .activites-cards img {
+        height: 200px;
     }
 }
 
@@ -443,15 +477,19 @@ footer {
         order: 1;
     }
 
-
-    /***** Hebergements *****/
-    .hebergements-cards {
-        grid: auto / auto;
+    /***** Populaires *****/
+    .populaires-cards a {
+        width: 100%;
     }
 
-    /***** Populaires *****/
-    .populaires-cards {
+    .activites-cards, .populaires-cards, .hebergements-cards {
+        display: flex;
         flex-direction: column;
+        gap: 15px;
+    }
+
+    .populaires-cards, .hebergements-cards {
+        margin-top: 15px;
     }
 
     /***** Footer *****/
