develop/update: css corrections and refactoring

--- a/css/style.css
+++ b/css/style.css
@@ -95,8 +95,7 @@ header .tab-button {
 /***** Body *****/
 
 .main-container {
-    display: grid;
-    grid-template-rows: auto 1fr auto;
+    display: flexbox;
     width: 100%;
     max-width: 1440px;
     padding: 0 50px;
@@ -117,8 +116,7 @@ header .tab-button {
 }
 
 #search-lodge-form {
-    display: grid;
-    grid: 50px / 50px auto;
+    display: flex;
     margin-right: auto;
 }
 
@@ -128,8 +126,6 @@ header .tab-button {
     border-radius: 0 15px 15px 0;
     justify-content: center;
     padding: 14px 16px;
-    font-weight: 700;
-    font-size: 18px;
 }
 
 #search-lodge-form button img {
@@ -137,8 +133,7 @@ header .tab-button {
 }
 
 .lodge-search-bar {
-    display: grid;
-    grid-template-columns: 1fr auto;
+    display: flex;
     border-top: 1px solid var(--main-bg-color);
     border-bottom: 1px solid var(--main-bg-color);
     border-radius: 0 15px 15px 0;
@@ -147,11 +142,13 @@ header .tab-button {
 .icon-place-pin {
     background-color: var(--main-bg-color);
     border-radius: 15px 0px 0px 15px;
+    width: 50px;
+    height: auto;
 }
 
 #lodge-form-input {
     padding: 0 28px;
-    font-weight: 700;
+    width: 100%;
 }
 
 /***** Filters *****/
@@ -174,7 +171,6 @@ header .tab-button {
     border: 2px solid var(--button-main-border-color);
     border-radius: 25px;
     font-size: 14px;
-    font-weight: 700;
     gap: 10px;
     padding: 12px 16px;
 }
@@ -198,7 +194,7 @@ header .tab-button {
     background-color: white;
     border-radius: 20px;
     padding: 5px;
-    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+    filter: drop-shadow(0px 3px 8px rgba(0, 0, 0, 0.1));
 }
 
 .card img {
@@ -207,10 +203,6 @@ header .tab-button {
 
 .card-title {
     font-size: 16px;
-}
-
-.euro {
-    font-weight: 700;
 }
 
 .neutral-star {
@@ -273,10 +265,6 @@ header .tab-button {
 
 .hebergements-cards .card-rating {
     margin-bottom: 5px;
-}
-
-.hebergements-show-more {
-    font-weight: 700;
 }
 
 /****** Populaires ***********/
@@ -446,7 +434,7 @@ footer {
         margin: 0;
     }
     .lodge-search-bar {
-        grid-template-columns: 1fr 50px;
+        width: 100%;
     }
     #search-lodge-form button {
         border-radius: 15px;
