--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,10 @@ body {
     min-height: 100vh;
 }
 
+section {
+    padding: 0;
+}
+
 a {
     color: inherit;
     text-decoration: none;
@@ -286,7 +290,7 @@ header {
     width: 32%;
 }
 
-.populaires-title, .hebergements-title {
+.populaires-title {
     display: flex;
     justify-content: space-between;
     align-items: center;
