--- a/css/style.css
+++ b/css/style.css
@@ -80,8 +80,12 @@ button, input {
     font-weight: 700;
 }
 
+.mt35 {
+    margin-top: 35px;
+}
+
 /***** Header *****/
-header {
+.header-nav {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -125,10 +129,14 @@ header {
 /***** Search Form *****/
 
 .search-lodge-container {
-    gap: 35px;
+    margin-top: 15px;
     margin-bottom: 45px;
     display: flex;
     flex-direction: column;
+}
+
+.search-lodge-container h1 {
+    margin-bottom: 8px;
 }
 
 #search-lodge-form {
@@ -441,15 +449,11 @@ footer {
     }
 
     /***** Header *****/
-    header {
+    .header-nav {
         flex-direction: column;
     }
     .booki-logo {
         margin: auto;
-    }
-    .header-tabs-container {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
     }
     .tab-button {
         border-top: none;
@@ -459,7 +463,7 @@ footer {
     /***** Body *****/
     #search-lodge-form {
         grid: 50px / 50px 1fr;
-        margin: 0;
+        margin-right: 0;
     }
     .lodge-search-bar {
         width: 100%;
@@ -473,6 +477,7 @@ footer {
     .search-lodge-container {
         padding: 20px;
         margin-bottom: 15px;
+        margin-top: 10px;
     }
 
     /***** Filters *****/
